added command line param parsing and the begginings of logging

--- a/cppserver/CMakeLists.txt
+++ b/cppserver/CMakeLists.txt
@@ -1,5 +1,9 @@
 find_package(Threads)
 
+
+find_package(Boost COMPONENTS program_options REQUIRED)
+find_package(spdlog REQUIRED)
+
 set(SOURCES
     src/main.cpp
     )
@@ -7,7 +11,10 @@ set(SOURCES
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
 add_executable(server ${SOURCES})
+#target_include_directories( server PRIVATE ${Boost_INCLUDE_DIR})
 target_link_libraries(server
     PRIVATE
-    proto
+        Boost::program_options
+        spdlog::spdlog
+        proto
     )
